vlib/v/checker/tests/incorrect_smartcast_err.out
vlib/v/checker/tests/incorrect_smartcast_err.vv:12:5: notice: smartcasting requires either an immutable value, or an explicit mut keyword before the value
   10 |         field: 'test'
   11 |     })
   12 |     if example is Example {
      |        ~~~~~~~
   13 |         println(example.field)
   14 |     }
vlib/v/checker/tests/incorrect_smartcast_err.vv:12:5: error: smart casting a mutable interface value requires `if mut example is ...`
   10 |         field: 'test'
   11 |     })
   12 |     if example is Example {
      |        ~~~~~~~
   13 |         println(example.field)
   14 |     }
vlib/v/checker/tests/incorrect_smartcast_err.vv:13:19: error: type `IExample` has no field named `field`
   11 |     })
   12 |     if example is Example {
   13 |         println(example.field)
      |                         ~~~~~
   14 |     }
   15 | }
vlib/v/checker/tests/incorrect_smartcast_err.vv:13:3: error: `println` can not print void expressions
   11 |     })
   12 |     if example is Example {
   13 |         println(example.field)
      |         ~~~~~~~~~~~~~~~~~~~~~~
   14 |     }
   15 | }
